samples/_failures_safe/1761174143_135652_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35ea9acc.c: In function ‘main’:
./samples/SAFE/__tmp_35ea9acc.c:158:5: error: expected ‘,’ or ‘;’ at end of input
  158 |     for (size_t i = 0
      |     ^~~
./samples/SAFE/__tmp_35ea9acc.c:158:5: error: expected declaration or statement at end of input
